[skip ci] Improve StreamStore